--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "apollo-angular": "^4.0.1",
     "graphql": "^16",
     "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^14.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
